--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "scripts": {
     "start": "react-scripts start",
